docs: architectural documentation and deployment guide
- Added comprehensive README.md with Hexagonal Architecture overview.
- Documented Clean Architecture principles, SOLID practices, and design patterns.
- Included Docker orchestration guide and automated data seeding workflow.
- Detailed API resource mapping (Student, Subject, Grade) and Swagger integration.